--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,8 @@ junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 room = "2.6.1"
 ksp = "1.9.22-1.0.17"
+coreKtxVersion = "1.7.0"
+junitKtx = "1.3.0"
 
 [libraries]
 # Core
@@ -54,6 +56,8 @@ androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = 
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "coreKtxVersion" }
+androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
