--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,10 +60,15 @@ dependencies {
 
     // Compose
     implementation platform(libs.androidx.compose.bom)
+    implementation("androidx.compose.material:material")
     implementation libs.androidx.compose.ui
     implementation libs.androidx.compose.ui.graphics
     implementation libs.androidx.compose.ui.tooling.preview
     implementation libs.androidx.compose.material3
+    //lottie
+    implementation "com.airbnb.android:lottie-compose:6.3.0"
+    //splash
+    implementation "androidx.core:core-splashscreen:1.0.1"
 
     // Navigation
     implementation libs.androidx.navigation.runtime.ktx
